--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1021,10 +1021,15 @@
 
     <string name="title_accessibility_collapsed">Collapsed</string>
     <string name="title_accessibility_expanded">Expanded</string>
+    <string name="action_accessibility_collapse">Collapse</string>
+    <string name="action_accessibility_expand">Expand</string>
     <string name="title_accessibility_seen">Read</string>
     <string name="title_accessibility_unseen">Unread</string>
     <string name="title_accessibility_flagged">Starred</string>
     <string name="title_accessibility_unflagged">Unstarred</string>
+    <string name="action_accessibility_flag">Star</string>
+    <string name="action_accessibility_unflag">Unstar</string>
+    <string name="action_accessibility_view_contact">View contact</string>
 
     <string-array name="pollIntervalNames">
         <item>Always</item>
